Can dynamically render buffer list

--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -4,7 +4,7 @@
 		</list-view>
 	</div>
   <div class="narrow">
-		<buffer-creator>
+		<buffer-creator fetch="$ctrl.fetchBuffers">
 		</buffer-creator>
 
 		<buffer-viewer>
