In middle of implementing dynamic number of chemicals

--- a/client/templates/app.html
+++ b/client/templates/app.html
@@ -1,13 +1,10 @@
 <div>
 	<div class="wide">
-		<list-view buffer-click="$ctrl.bufferClick" buffers="$ctrl.buffers">
-		</list-view>
+		<list-view buffer-click="$ctrl.bufferClick" buffers="$ctrl.buffers"></list-view>
 	</div>
   <div class="narrow">
-		<buffer-creator fetch="$ctrl.fetchBuffers">
-		</buffer-creator>
+		<buffer-creator fetch="$ctrl.fetchBuffers"></buffer-creator>
 
-		<buffer-viewer current="$ctrl.currentBuffer" current-components="$ctrl.currentComponents">
-		</buffer-viewer>
+		<buffer-viewer current="$ctrl.currentBuffer" current-components="$ctrl.currentComponents"></buffer-viewer>
 	</div>
 </div>
