In middle of working on inserting multiple chemicals into database

--- a/client/templates/addChemical.html
+++ b/client/templates/addChemical.html
@@ -1,7 +1,7 @@
 <div>
 	<label>Chemical</label>
-	<input id="comp2" ng-model="$ctrl.chemicals[$ctrl.chemIndex].amount" type="text" required>
+	<input ng-change="$ctrl.valueChange()" ng-model="$ctrl.name" type="text">
 	<br>
 	<label>Amount</label>
-	<input ng-model="$ctrl.chemicals[$ctrl.chemIndex].name" type="text" required>
+	<input ng-change="$ctrl.valueChange()" ng-model="$ctrl.amount" type="text">
 </div>
