--- a/client/templates/bufferViewer.html
+++ b/client/templates/bufferViewer.html
@@ -7,15 +7,7 @@
 			<th>Chemical Name</th>
 			<th>Amount</th>
 		</tr>
-		<tr>
-			<td>{{$ctrl.currentComponents[0].name}}</td>
-			<td>{{$ctrl.currentComponents[0].amount}}</td>
-		</tr>
-		<tr>
-			<td>{{$ctrl.currentComponents[1].name}}</td>
-			<td>{{$ctrl.currentComponents[1].amount}}</td>
-		</tr>
+		<tr ng-repeat="i in $ctrl.currentComponents"><td>{{i.name}}</td><td>{{i.amount}}</td>
 	</table>
-
   <button>Update</button>
 </div>
