Added live search functionality

--- a/client/templates/addChemical.html
+++ b/client/templates/addChemical.html
@@ -1,6 +1,6 @@
 <div>
 	<label>Chemical</label>
-	<input ng-change="$ctrl.valueChange()" ng-model="$ctrl.name" type="text">
+	<input class="chemical" ng-change="$ctrl.valueChange()" ng-model="$ctrl.name" type="text">
 	<br>
 	<label>Amount</label>
 	<input ng-change="$ctrl.valueChange()" ng-model="$ctrl.amount" type="text">
