--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,7 @@
+div, h1 {
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
 div.component {
   border: 1px solid black;
   padding: 5px;
@@ -38,4 +42,13 @@ h1 {
 	width: 7%;
 	float: right;
 	cursor: pointer;
+}
+
+ul {
+	background: white;
+	list-style: none;
+}
+
+.ui-helper-hidden-accessible { 
+	display:none; 
 }
