--- a/client/templates/bufferViewer.html
+++ b/client/templates/bufferViewer.html
@@ -7,7 +7,7 @@
 			<th>Chemical Name</th>
 			<th>Amount</th>
 		</tr>
-		<tr ng-repeat="i in $ctrl.currentComponents"><td>{{i.name}}</td><td>{{i.amount}}</td>
+		<tr ng-repeat="i in $ctrl.currentComponents"><td><a href='{{$ctrl.url + $ctrl.msds[i.name]}}'>{{i.name}}</a></td><td>{{i.amount}}</td>
 	</table>
   <button>Update</button>
 </div>
