--- a/client/templates/bufferViewer.html
+++ b/client/templates/bufferViewer.html
@@ -1,13 +1,14 @@
 <div class="component buffer-viewer">
 	<p>Buffer Name: {{$ctrl.current.name}}</p>
 	<p>Scientist Name: {{$ctrl.current.user}}</p>
+	<p>Description: {{$ctrl.current.description}}</p>
 
 	<table style="width: 70%">
 		<tr>
 			<th>Chemical Name</th>
 			<th>Amount</th>
 		</tr>
-		<tr ng-repeat="i in $ctrl.currentComponents"><td><a href='{{$ctrl.url + $ctrl.msds[i.name]}}'>{{i.name}}</a></td><td>{{i.amount}}</td>
+		<tr ng-repeat="i in $ctrl.currentComponents"><td><a target="_blank" href='{{$ctrl.url + $ctrl.msds[i.name]}}'>{{i.name}}</a></td><td>{{i.amount}}</td>
 	</table>
   <button>Update</button>
 </div>
