--- a/client/templates/bufferViewer.html
+++ b/client/templates/bufferViewer.html
@@ -8,7 +8,7 @@
 			<th>Chemical Name</th>
 			<th>Amount</th>
 		</tr>
-		<tr ng-repeat="i in $ctrl.currentComponents"><td><a target="_blank" href='{{$ctrl.url + $ctrl.msds[i.name]}}'>{{i.name}}</a></td><td>{{i.amount}}</td>
+		<tr ng-repeat="i in $ctrl.currentComponents"><td><a target="_blank" href='{{$ctrl.url + $ctrl.msds[i.name]}}'>{{i.name}}</a></td><td><input type="text" ng-model="i.amount"></td>
 	</table>
-  <button>Update</button>
+  <button ng-click="$ctrl.update()">Update</button>
 </div>
